fix overflow bug when one long world corrupt markup

--- a/src/app/forum/post/block/block.component.scss
+++ b/src/app/forum/post/block/block.component.scss
@@ -9,6 +9,10 @@
   }
 .text-block{
   white-space: pre-line;
+  display: inline-block;
+  max-width: 700px;
+  overflow: hidden;
+  width: calc(100vw - 19px);
 }
 //   .text-cont{
 //     flex-basis:700px
